--- a/src/main/react/index.html
+++ b/src/main/react/index.html
@@ -48,9 +48,11 @@
 -->
 
 <h1>Awesome messages yo</h1>
-<div id="list">
-
+<div id="words">
 </div>
+
+<div id="distributions"></div>
+
 
 
 <script src="./eventSource.js"/>
