--- a/src/main/react/index.html
+++ b/src/main/react/index.html
@@ -29,7 +29,30 @@
 
 <!--    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />-->
 <!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
+<style>
+    body {
+        background: black;
+        color: white;
+    }
+    h1{
+        text-align: center;
+    }
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        align-content: space-around;
+    }
 
+    .items{
+        color:black;
+        background: yellow;
+        padding:10px;
+        border-radius: 15px;
+        margin: 10px auto;
+    }
+
+</style>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -48,10 +71,20 @@
 -->
 
 <h1>Awesome messages yo</h1>
-<div id="words">
-</div>
+<div class="container">
+    <div class="items">
+        <h2>Words</h2>
+        <ul id="distributions">
+        </ul>
+    </div>
 
-<div id="distributions"></div>
+    <div class="items" >
+        <h2>Distributions</h2>
+        <ul id="words">
+        </ul>
+    </div>
+
+</div>
 
 
 
