--- a/src/main/react/index.html
+++ b/src/main/react/index.html
@@ -1,64 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--    <meta charset="utf-8" />-->
-<!--    <link rel="icon" href="images/favicon.ico" />-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1" />-->
-<!--    <meta name="theme-color" content="#000000" />-->
-<!--    <meta-->
-<!--            name="description"-->
-<!--            content="Fancy pants teampot voor heren 5"-->
-<!--    />-->
-<!--    <link rel="apple-touch-icon" href="images/logo192.png" />-->
-<!--    &lt;!&ndash;-->
-<!--      manifest.json provides metadata used when your web app is installed on a-->
-<!--      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/-->
-<!--    &ndash;&gt;-->
-<!--    <link rel="manifest" href="./manifest.json" />-->
-<!--    &lt;!&ndash;-->
-<!--      Notice the use of %PUBLIC_URL% in the tags above.-->
-<!--      It will be replaced with the URL of the `public` folder during the build.-->
-<!--      Only files inside the `public` folder can be referenced from the HTML.-->
+    <!--    <meta charset="utf-8" />-->
+    <!--    <link rel="icon" href="images/favicon.ico" />-->
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1" />-->
+    <!--    <meta name="theme-color" content="#000000" />-->
+    <!--    <meta-->
+    <!--            name="description"-->
+    <!--            content="Fancy pants teampot voor heren 5"-->
+    <!--    />-->
+    <!--    <link rel="apple-touch-icon" href="images/logo192.png" />-->
+    <!--    &lt;!&ndash;-->
+    <!--      manifest.json provides metadata used when your web app is installed on a-->
+    <!--      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/-->
+    <!--    &ndash;&gt;-->
+    <!--    <link rel="manifest" href="./manifest.json" />-->
+    <!--    &lt;!&ndash;-->
+    <!--      Notice the use of %PUBLIC_URL% in the tags above.-->
+    <!--      It will be replaced with the URL of the `public` folder during the build.-->
+    <!--      Only files inside the `public` folder can be referenced from the HTML.-->
 
-<!--      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will-->
-<!--      work correctly both with client-side routing and a non-root public URL.-->
-<!--      Learn how to configure a non-root public URL by running `npm run build`.-->
-<!--    &ndash;&gt;-->
-<!--    <title>Team balance</title>-->
+    <!--      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will-->
+    <!--      work correctly both with client-side routing and a non-root public URL.-->
+    <!--      Learn how to configure a non-root public URL by running `npm run build`.-->
+    <!--    &ndash;&gt;-->
+    <!--    <title>Team balance</title>-->
 
 
-<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />-->
-<!--    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />-->
-<style>
-    body {
-        background: black;
-        color: white;
-    }
-    h1{
-        text-align: center;
-    }
-    .container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-content: space-around;
-    }
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <style>
 
-    .items{
-        color:black;
-        background: yellow;
-        padding:10px;
-        border-radius: 15px;
-        margin: 10px auto;
-    }
 
-</style>
+    </style>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 
 
-<!--    <div id="root"></div>-->
+<div id="root"></div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
@@ -70,25 +50,24 @@
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
 
-<h1>Awesome messages yo</h1>
-<div class="container">
-    <div class="items">
-        <h2>Words</h2>
-        <ul id="distributions">
-        </ul>
-    </div>
+<!--<h1>Awesome messages yo</h1>-->
+<!--<div class="container">-->
+<!--    <div class="items">-->
+<!--        <h2>Words</h2>-->
+<!--        <ul id="distributions">-->
+<!--        </ul>-->
+<!--    </div>-->
 
-    <div class="items" >
-        <h2>Distributions</h2>
-        <ul id="words">
-        </ul>
-    </div>
+<!--    <div class="items">-->
+<!--        <h2>Distributions</h2>-->
+<!--        <ul id="words">-->
+<!--        </ul>-->
+<!--    </div>-->
 
-</div>
+<!--</div>-->
 
 
-
-<script src="./eventSource.js"/>
+<!--<script src="./eventSource.js"/>-->
 </body>
 </html>
 
